fx(statusCode): Fix inappropriate status code
- return appropriate code to users

[Delivers]
